Updated the HTML markdown to reflect Polymer 1.0 semantics using dom-module.

--- a/demo-element.html
+++ b/demo-element.html
@@ -2,7 +2,7 @@
 <link rel="import" href="pubnub-element.html">
 <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
 
-<polymer-element name="list-data" attributes="heading {{data}}">
+<dom-module id="list-data">
   <template>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <div class="panel panel-default">
@@ -22,4 +22,4 @@ Polymer('list-data', {
   }
 });
   </script>
-</polymer-element>
+</dom-module>
