:art: Update to Polymer 1.1 and fix the demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -10,13 +10,14 @@
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
 
   <link rel="import" href="../pubnub-element.html">
+  <link rel="import" href="demo-element.html">
   
   <style is="custom-style"></style>
 
 </head>
 <body unresolved>
 
-  Hello!
+  <demo-element></demo-element>
 
 </body>
 </html>
