:fire: Remove hidden attr

--- a/pubnub-element.html
+++ b/pubnub-element.html
@@ -18,7 +18,7 @@ set `origin` server as well as any optional configurations such as `uuid`.
 @homepage 
 -->
 
-<dom-module id="pubnub-element" hidden>
+<dom-module id="pubnub-element">
   <script src="https://cdn.pubnub.com/pubnub.js"></script>
 
   <script>
