Add the rest of the elements

--- a/pubnub-publish.html
+++ b/pubnub-publish.html
@@ -54,6 +54,8 @@ Place it inside of a `<pubnub-element>` element.
 
       },
 
+      done: false,
+
       ready: function() {
         var self = this;
 
