--- a/pubnub-element.html
+++ b/pubnub-element.html
@@ -1,6 +1,9 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="pubnub-subscribe.html">
 <link rel="import" href="pubnub-publish.html">
+<link rel="import" href="pubnub-history.html">
+<link rel="import" href="pubnub-here-now.html">
+<link rel="import" href="pubnub-where-now.html">
 
 <!--
 `<pubnub-element></pubnub-element>` initializes the PubNub client. 
