Add a simple stylesheet and the history element

--- a/demo/demo-element.html
+++ b/demo/demo-element.html
@@ -2,14 +2,49 @@
 
 <dom-module id="demo-element">
   <template>
+    <style>
+      :host {
+        display: block;
+      }
+
+      article {
+        display: inline-block;
+        float: left;
+        margin-left: 10px;
+        margin-right: 10px;
+        min-width: 200px;
+      }
+
+      article header {
+        text-align: center;
+      }
+    </style>
+
     <pubnub-element publish-key="pub-c-c6f75f20-d425-4fb3-b531-6367031b60ce" subscribe-key="sub-c-e915b05a-4ccc-11e5-81b5-02ee2ddab7fe" uuid="123">
       <pubnub-subscribe channel="demo" messages="{{messages}}" on-callback="_subscribeCallback"></pubnub-subscribe>
       <pubnub-publish channel="demo" message="{&quot;text&quot;: &quot;Polymer rules!&quot;}"></pubnub-publish>
+      <pubnub-history channel="demo" history="{{history}}"></pubnub-history>
     </pubnub-element>
+    
+    <article>
+      <header><h3>Messages</h3></header>
 
-    <template is="dom-repeat" items="{{messages}}">
-      <li>#<span>{{index}}</span>: <span>{{item.text}}</span></li>
-    </template>
+      <main>
+        <template is="dom-repeat" items="{{messages}}">
+          <li>#<span>{{index}}</span>: <span>{{item.text}}</span></li>
+        </template>
+      </main>
+    </article>
+
+    <article>
+      <header><h3>History</h3></header>
+
+      <main>
+        <template is="dom-repeat" items="{{history}}">
+          <li>#<span>{{index}}</span>: <span>{{item.text}}</span></li>
+        </template>
+      </main>
+    </article>
   </template>
 
   <script>
@@ -17,7 +52,8 @@
       is: 'demo-element',
 
       properties: {
-        messages: { type: Array, value: [], notify: true }
+        messages: { type: Array, value: [], notify: true },
+        history: { type: Array, value: [], notify: true }
       },
 
       _subscribeCallback: function(evt, msg) {
