Add pubnub-replay element

--- a/pubnub-element.html
+++ b/pubnub-element.html
@@ -4,6 +4,7 @@
 <link rel="import" href="pubnub-history.html">
 <link rel="import" href="pubnub-here-now.html">
 <link rel="import" href="pubnub-where-now.html">
+<link rel="import" href="pubnub-replay.html">
 
 <!--
 `<pubnub-element></pubnub-element>` initializes the PubNub client. 
