Add  missing variable

--- a/pubnub-here-now.html
+++ b/pubnub-here-now.html
@@ -63,6 +63,8 @@ including a list of unique user-ids currently subscribed to the channel and the 
 
       },
 
+      done: false,
+
       ready: function() {
         var self = this;
 
