--- a/index.html
+++ b/index.html
@@ -8,21 +8,22 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS
 -->
 <html>
-<head>
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-  <!--
-  <script src="../platform/platform.js"></script>
-  <link rel="import" href="../polymer/polymer.html">
-  <link rel="import" href="../core-component-page/core-component-page.html">
-  -->
-  <script src="../platform/platform.js"></script>
-  <link rel="import" href="../polymer/polymer.html">
-  <link rel="import" href="../core-component-page/core-component-page.html">
+  <head>
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+    <!--
+<script src="../platform/platform.js"></script>
+<link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../core-component-page/core-component-page.html">
+-->
+    <script src="../webcomponentsjs/webcomponents-lite.js"></script>
 
-</head>
-<body unresolved>
+    <link rel="import" href="../polymer/polymer.html">
+    <link rel="import" href="../iron-component-page/iron-component-page.html">
 
-  <core-component-page sources='["pubnub-element.html"]'></core-component-page>
+  </head>
+  <body unresolved>
 
-</body>
+    <iron-component-page src="pubnub-element.html"></iron-component-page>
+
+  </body>
 </html>
